# speedbook

./: README.md  errata.md  pyproject.toml
notebooks/: amp.ipynb  bf16.ipynb  bf16_cpu.ipynb  bitcount.ipynb  channel_last.ipynb  compile.ipynb  compile_cpu.ipynb  distillation.ipynb  eval_cifar10.py  favor.ipynb  fp16.ipynb  lowrank.ipynb  lowrankface.ipynb  models.py  profile.ipynb  pruning.ipynb  pruning_benchmark.ipynb  quantization.ipynb  quantize_matrix.ipynb  random_features.ipynb
